fix: align icon

--- a/src/style/theme.less
+++ b/src/style/theme.less
@@ -2,6 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt&family=B612');
 
 @tailwind base;
+
+@layer base {
+  svg {
+    display: inline;
+    vertical-align: baseline;
+  }
+}
+
 @tailwind components;
 @tailwind utilities;
 
@@ -93,10 +101,6 @@ code {
   }
 }
 
-svg {
-  vertical-align: middle;
-}
-
 .ant-form-item-has-error :not(.ant-input-disabled).ant-input:hover {
   box-shadow: none;
 }
@@ -117,7 +121,6 @@ svg {
 .tag-input {
   width: 78px;
   margin-right: 8px;
-  vertical-align: middle;
 }
 
 .min-h-2-card {
@@ -167,10 +170,6 @@ svg {
 
 .ant-comment-inner {
   padding: 8px;
-}
-
-.anticon {
-  vertical-align: middle;
 }
 
 .ant-popover-inner-content {
